# Agent

./: .env  README.md  main.py  pyproject.toml
app/agent/: context.py  graph.py  llm.py  state.py
app/agent/nodes/: add_extra_context.py  execute_sql.py  extract_keywords.py  filter_metric.py  filter_table.py  generate_sql.py  merge_retrieved.py  recall_column.py  recall_metric.py  recall_value.py  regulate_sql.py  validate_sql.py
app/api/: dependencies.py
app/api/routers/: query_router.py
app/api/schemas/: query_schema.py
app/clients/: Embeddingcli_Manager.py  Escli_Manager.py  MySQLcli_Manager.py  Qdrantcli_Manager.py
app/conf/: app_config.py  meta_repository_config.py
app/core/: lifespan.py  log.py
app/entities/: example_info.py  value_info.py
app/models/: column_metric_mysql.py
app/prompt/: prompt_loader.py
app/repositories/es/: value_es_repository.py
app/repositories/mysql/dw/: dw_mysql_repository.py
app/repositories/mysql/meta/: meta_mysql_repository.py
app/repositories/qdrant/: column_qdrant_repository.py  example_qdrant_repository.py  metric_qdrant_repository.py
app/scripts/: build_meta_repository.py
app/services/: meta_repository_service.py  query_service.py
conf/: app_config.yaml  meta_config.yaml
data-agent-front/: README1.md  package-lock.json
data-agent-front/src/: App.vue
docker/: docker-compose.yaml
prompts/: extend_keywords_for_value_recall.prompt  filter_table_info.prompt  generate_sql.prompt
