[project]
name = "data-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "anthropic>=0.96.0",
    "asyncmy>=0.2.11",
    "cryptography>=46.0.7",
    "dotenv>=0.9.9",
    "elasticsearch==8.19.3",
    "fastapi[standard]>=0.136.0",
    "huggingface-hub>=1.11.0",
    "jieba==0.42",
    "jieba3k>=0.35.1",
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.1",
    "langchain-huggingface==1.2.1",
    "langchain-openai>=1.2.0",
    "langchain-qdrant>=1.1.0",
    "langgraph>=1.1.8",
    "langsmith[claude-agent-sdk]>=0.7.33",
    "loguru>=0.7.3",
    "numpy>=2.4.4",
    "omegaconf>=2.3.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.17.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]
